Revert "Revert optimization removal (#1352)"
This reverts commit 263e92e2da1a0e934510a61f7525b1f310d13924.